<resources>
    <string name="app_name">MyConsumption</string>

    <!-- Menu item to open the Experts screen [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_experts_directory">Experts</string>

    <!-- Accessibility description for menu item to open the Experts screen. -->
    <string name="navdrawer_item_experts_directory_a11y">Experts Directory</string>

    <!-- Menu item to open the Chart screen [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_chart">Chart</string>

    <!-- Accessibility description for menu item to open the Explore screen. -->
    <string name="navdrawer_item_explore_a11y">Explore Google I/O</string>

    <!-- Menu item to open the Stats screen [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_stat">Stats</string>

    <!-- Menu item to open the My Schedule screen [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_my_schedule">My Schedule</string>

    <!-- Menu item to open the People I've Met screen [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_people_ive_met">People I\'ve Met</string>

    <!-- Accessibility description of item to open the People I've Met screen -->
    <string name="navdrawer_item_people_ive_met_a11y">People I\'ve Met</string>

    <!-- Menu item to open the Settings screen [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_settings">Settings</string>

    <!-- Menu item to start the Sign In flow [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_sign_in">Sign in</string>

    <!-- Menu item to open a screen that lists I/O related hashtags. Each hashtag, when clicked, will
    open Google+ stream of posts that uses the hashtag [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_social">Social</string>

    <!-- Menu item to open a list of current and past I/O videos [CHAR_LIMIT=20] -->
    <string name="navdrawer_item_video_library">Video library</string>

    <!-- Text indicator that appears below the user's name, showing that they are
    attending the conference in person in San Francisco. -->
    <string name="navdrawer_status_attending_in_person">Attending I/O in person</string>

    <!-- Text indicator that appears below the user's name, showing that they are
    attending the conference remotely via live streaming. -->
    <string name="navdrawer_status_attending_remotely">Attending I/O remotely</string>
    <string name="title_helloworld">Hello World Activity</string>
    <string name="description_refresh">Refresh</string>



    <!--From the old strings.xml-->


    <!--    <string name="action_disconnect">Disconnect</string>-->
    <string name="action_delete">Delete</string>
    <string name="action_edit_sensor">Edit sensor</string>
    <!--    <string name="action_add_sensor">Add sensor</string>-->

    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_create_sensor">Create sensor</string>
    <string name="button_edit_sensor">Edit sensor</string>

    <string name="chart_text_no_sensor">This user doesn\'t own any sensor, please add one from the menu</string>
    <string name="chart_text_no_data">Please choose dataset to display</string>

    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_title_information">Information</string>
    <string name="dialog_title_loading">Loading</string>

    <string name="dialog_message_confirmation_delete_sensor">Are you sure that you want to delete sensor %s? This can\'t be cancelled</string>
    <string name="dialog_message_information_sensor_deleted">The sensor has been deleted!</string>
    <string name="dialog_message_loading_creating_sensor">Adding sensor, please wait…</string>
    <string name="dialog_message_loading_editing_sensor">Updating sensor, please wait…</string>
    <string name="dialog_message_information_sensor_added">Sensor added successfully!</string>
    <string name="dialog_message_information_sensor_edited">Sensor edited successfully!</string>
    <string name="dialog_message_information_user_added">User successfully added, you can now login</string>
    <string name="dialog_message_error_sensor_not_added">Cannot add this sensor, please check the information</string>
    <string name="dialog_message_error_user_already_exists">This username already exists</string>
    <string name="dialog_message_error_password_must_match">Both passwords must match in order to register</string>
    <string name="dialog_message_error_must_fill_all_fields">You must fill all the fields in order to register</string>
    <string name="dialog_message_information_no_sensor_for_this_user">This user doesn\'t own any sensor, please add one from the menu</string>
    <string name="dialog_message_error_when_loading_please_reconnect">Error when loading local user or sensor data. Please reconnect</string>
    <string name="dialog_error_update_data_error">An error occurred when retrieving your data. Is your internet connection working?</string>

    <string name="hint_edit_not_changeable">This value cannot be edited</string>
    <string name="hint_edit_type_value_not_changed">Not changed</string>

    <string name="label_sensor_type">Sensor Type</string>
    <string name="label_sensor_name">Sensor name</string>
    <string name="label_title_sensor_specific_settings">Sensor-specific settings</string>
    <string name="label_title_global_settings">Global Settings</string>

    <string name="login_title">StarfishR MyConsumption</string>
    <string name="login_login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_pwd">Password</string>
    <string name="login_no_account">You don\'t have an account?</string>
    <string name="login_create_account">Create account</string>

    <string name="textview_display_interval">Display interval</string>
    <string name="textview_date">Date</string>
    <string name="textview_precision">Precision</string>
    <string name="textview_user_name">User Name</string>
    <string name="textview_smoothing">Smoothing</string>
    <string name="text_warning">Warning</string>

    <string name="text_reload">Reloading data</string>

    <string name="pref_user_profile_professional">I am a professional client</string>
    <string name="pref_user_profile_professional_sum">Client type</string>
    <string name="pref_user_profile_consumption_edit">My annual consumption is (kWh):</string>
    <string name="pref_user_profile_consumption">Tap to enter your annual consumption</string>
    <string name="pref_user_profile_consumption_sum">Annual consumption</string>
    <string name="pref_user_profile_choose_sum">Select your consumption profile</string>
    <string name="pref_user_profile_choose">Tap to choose your consumption profile</string>
    <string name="pref_user_profile_choose_list">My electricity consumption profile is best described as follows:</string>

    <string name="textview_stat_consumption">Consumption over this period:</string>
    <string name="textview_stat_average">Average consumption:</string>
    <string name="textview_stat_maximum">Maximum value:</string>
    <string name="textview_stat_minimum">Minimum value:</string>
    <string name="textview_stat_comparison">compared to previous period</string>

    <string name="textview_stat_kWh">kWh</string>
    <string name="textview_stat_watts">watts</string>
    <string name="textview_stat_weight">kg of CO2</string>
    <string name="textview_stat_money">€</string>
    <string name="textview_stat_high_peak">high peak</string>
    <string name="textview_stat_off_peak">off peak</string>

    <string name="textview_stat_no_value_found">Not enough values found to compute this period...</string>
    <string name="pref_user_profile">User profile</string>
    <string name="navdrawer_item_comparison">Comparison</string>
    <string name="textview_comp_profile_description">My energy consumption profile is best described as follows:</string>
    <string name="button_modify">Modify</string>
    <string name="textview_comp_avg_consumption">Average profile consumption:</string>
    <string name="textview_comp_kWh_year">kWh / year</string>
    <string name="textview_comp_my_consumption">My consumption:</string>
    <string name="text_comp_over">over the average</string>
    <string name="text_comp_under">under the average</string>
    <string name="pref_sync_notif_sum">Notifications</string>
    <string name="pref_sync_notif">Allow to receive notifications from the server</string>
    <string name="pref_sync_refresh_sum">Refreshing frequency</string>
    <string name="pref_sync_refresh">Period between each synchronization with the server</string>
    <string name="title_chart">MyConsumption - Chart</string>
    <string name="title_comp">MyConsumption - Comparison</string>
    <string name="title_settings">MyConsumption - Settings</string>
    <string name="title_stat">MyConsumption - Statistics</string>
    <string name="navdrawer_item_add_sensor">Add a sensor</string>
    <string name="text_sensor_spinner">Sensor:</string>
    <string name="text_enter_username">Enter wanted Username</string>
    <string name="text_enter_password">Enter a password</string>
    <string name="text_enter_password_again">Enter the same password again</string>
    <string name="text_create_account">Create Account</string>
    <string name="title_add_sensor">Add sensor</string>
</resources>
