<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_user_profile">
        <CheckBoxPreference
            android:key="pref_profile_professional"
            android:title="@string/pref_user_profile_professional_sum"
            android:summary="@string/pref_user_profile_professional"
            android:defaultValue="false"
            android:enabled="false"/>

        <EditTextPreference
            android:key="pref_profile_annual_consumption"
            android:title="@string/pref_user_profile_consumption_sum"
            android:summary="@string/pref_user_profile_consumption"
            android:inputType="number"
            android:dialogTitle="@string/pref_user_profile_consumption_edit"
            android:enabled="false"/>

        <ListPreference
            android:key="pref_profile_house"
            android:title="@string/pref_user_profile_choose_sum"
            android:dialogTitle="@string/pref_user_profile_choose_list"
            android:entries="@array/pref_house_entries"
            android:entryValues="@array/pref_house_values"
            android:defaultValue="1"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Synchronization">
        <ListPreference
            android:key="pref_sync_refresh"
            android:title="@string/pref_sync_refresh_sum"
            android:dialogTitle="@string/pref_sync_refresh"
            android:entries="@array/pref_sync_refresh_entries"
            android:entryValues="@array/pref_sync_refresh_values"
            android:defaultValue="2"/>

        <CheckBoxPreference
            android:key="pref_sync_notification"
            android:title="@string/pref_sync_notif_sum"
            android:summary="@string/pref_sync_notif"
            android:defaultValue="true" />
    </PreferenceCategory>

</PreferenceScreen>
