<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextUsername"
            android:hint="@string/text_enter_username"
            />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/text_enter_password"
            android:id="@+id/editTextPassword"
            android:layout_below="@+id/editTextUsername"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/text_enter_password_again"
            android:ems="10"
            android:id="@+id/editTextPassword2"
            android:layout_below="@+id/editTextPassword"
            />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_create_account"
            android:id="@+id/buttonCreateAccount"
            android:layout_below="@+id/editTextPassword2"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>